--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -4,10 +4,11 @@ services:
     env_file:
       - .env
     ports:
-      - 3000:3000
+      - "3000:3000"
     volumes:
       - .:/usr/src/app
-    command: air cmd/main.go -b 0.0.0.0
+    mem_limit: 1g
+    command: air ./cmd/main.go -b 0.0.0.0
   db:
     image: postgres:alpine
     environment:
@@ -15,11 +16,10 @@ services:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
       - POSTGRES_DB=${DB_NAME}
     ports:
-      - 5432:5432
+      - "5432:5432"
     volumes:
       - postgres-db:/var/lib/postgresql/data
+    mem_limit: 1g
 
 volumes:
   postgres-db:
-
-
