--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,6 +10,17 @@ services:
     mem_limit: 512m
     container_name: shipbuilder-go
     command: air ./cmd/main.go -b 0.0.0.0
+  web-debug:
+    build:
+      context: . 
+      dockerfile: Dockerfile.debug
+    env_file:
+      - .env
+    ports:
+      - "4000:4000"
+      - "3001:3000"
+    mem_limit: 512m
+    container_name: shipbuilder-go-debugger
   db:
     image: postgres:alpine
     environment:
